# RenderCanvasToVideo

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  MIGRACION_TAURI.md  MIGRATE_DEPS.md  NOTICE.md  README.md  index.html  main.js  mcp-server.js  package-lock.json  package.json  preload.js  server.js  test-pipeline.js
.github/workflows/: build-windows.yml  build.yml  ci.yml  release.yml
docs/: mcp-server.md
mcp-server/: Cargo.toml
mcp-server/src/: main.rs
proyectos/particle-demo/: script.js  style.css
proyectos/sample-animation/: index.html
proyectos/test-anim/: script.js
proyectos/test-project/: index.html
public/: app.js  index.html  script.js  style.css
renderCanvasCLI/: __init__.py  __main__.py  browser.py  cli.py  config.py  ffmpeg.py  presets.py  progress.py  project.py  renderer.py
rendercanvas/: __init__.py  __main__.py  browser.py  cli.py  config.py  ffmpeg.py  project.py  renderer.py
scripts/: install-chrome.js  install-ffmpeg.js
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: admin_api.rs  capture.rs  ffmpeg.rs  lib.rs  main.rs  queue.rs  server.rs  state.rs  webview2.rs
src/components/: DropZone.tsx  LogViewer.tsx  ProgressBar.tsx  RenderCapture.tsx  RenderForm.tsx
src/hooks/: useRenderQueue.ts  useRenderStatus.ts
tests/: api.test.js  server-utils.test.js  test_cli.py  test_config.py  test_ffmpeg.py  test_presets.py  test_progress.py  test_project.py
vscode-extension/: .gitignore  package-lock.json  package.json  tsconfig.json
(+10 files in other folders)
