[package]
name = "rendercanvastovideo"
version = "0.2.3"
description = "Render Canvas To Video - Tauri version"
authors = ["Javier Jara"]
edition = "2021"

[lib]
name = "rendercanvastovideo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
