[package]
name = "rendercanvastovideo"
version = "0.3.0"
description = "Render Canvas To Video - Tauri version"
authors = ["Javier Jara"]
edition = "2021"

[lib]
name = "rendercanvastovideo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tiny_http = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
url = "2"
